--- a/controller.html
+++ b/controller.html
@@ -20,7 +20,7 @@
     <input type="text" id="cmd" placeholder="Execute command (e.g. ls, reboot, input tap x y)">
 
     <script>
-        const SERVER_URL = "https://your-tunnel-name.trycloudflare.com";
+        const SERVER_URL = "https://administered-mhz-spas-structural.trycloudflare.com";
         const socket = io(SERVER_URL);
         let activeId = "";
 
