--- a/bx.html
+++ b/bx.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fixed Web-ADB Console</title>
-    <script src="https://unpkg.com/webadb@latest/dist/webadb.js"></script>
+    <title>Brave Compatible ADB Console</title>
+    
+    <script src="https://cdn.jsdelivr.net/npm/webadb@latest/dist/webadb.min.js"></script>
+
     <style>
-        :root { --bg: #0f172a; --card: #1e293b; --accent: #38bdf8; --text: #f8fafc; }
-        body { font-family: sans-serif; background: var(--bg); color: var(--text); padding: 20px; display: flex; justify-content: center; }
-        .container { width: 100%; max-width: 700px; background: var(--card); padding: 25px; border-radius: 16px; border: 1px solid #334155; }
-        .controls { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin: 20px 0; }
-        button { background: var(--accent); color: #000; border: none; padding: 12px; border-radius: 8px; font-weight: 600; cursor: pointer; }
-        button:disabled { background: #475569; opacity: 0.6; }
-        #terminal { background: #000; color: #10b981; padding: 15px; border-radius: 8px; height: 300px; overflow-y: auto; font-family: monospace; font-size: 13px; border: 1px solid #334155; white-space: pre-wrap; }
-        .status { text-align: center; margin-bottom: 10px; font-weight: bold; }
+        :root { --bg: #0d1117; --card: #161b22; --accent: #58a6ff; --text: #c9d1d9; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: var(--bg); color: var(--text); padding: 20px; display: flex; justify-content: center; }
+        .container { width: 100%; max-width: 650px; background: var(--card); padding: 25px; border-radius: 12px; border: 1px solid #30363d; box-shadow: 0 8px 24px rgba(0,0,0,0.5); }
+        .status-box { padding: 10px; margin-bottom: 20px; border-radius: 6px; text-align: center; font-weight: bold; background: #21262d; border: 1px solid #30363d; }
+        .btn-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+        button { background: #238636; color: white; border: none; padding: 12px; border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 600; }
+        button:hover { background: #2ea043; }
+        button:disabled { background: #484f58; cursor: not-allowed; }
+        #terminal { background: #010409; color: #39ff14; padding: 15px; border-radius: 6px; height: 300px; overflow-y: auto; font-family: 'Consolas', monospace; font-size: 12px; margin-top: 20px; border: 1px solid #30363d; line-height: 1.5; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h2 style="text-align: center; color: var(--accent);">ADB Web Controller</h2>
-    <div id="statusLabel" class="status" style="color: #ef4444;">● Library Loading...</div>
+    <h2 style="text-align: center; color: var(--accent);">ADB Web Console (Brave)</h2>
+    <div id="statusLabel" class="status-box" style="color: #f85149;">Waiting for Library...</div>
 
-    <div class="controls">
-        <button id="btnConnect">Connect Device</button>
-        <button id="btnShell" disabled>Get Device Model</button>
+    <div class="btn-grid">
+        <button id="btnConnect">Connect Android</button>
+        <button id="btnModel" disabled>Get Phone Model</button>
+        <button id="btnBattery" disabled>Check Battery</button>
+        <button id="btnLogcat" disabled>Start Logcat</button>
     </div>
 
-    <div id="terminal">--- Console Logs ---<br></div>
+    <div id="terminal">> Status: Waiting for user action...<br></div>
 </div>
 
 <script>
@@ -35,51 +40,55 @@
     const terminal = document.getElementById('terminal');
     const statusLabel = document.getElementById('statusLabel');
 
-    // Library check korar function
-    window.onload = () => {
+    // Check if library loaded
+    function checkLibrary() {
         if (typeof Adb !== 'undefined') {
-            statusLabel.innerText = "● Ready to Connect";
-            statusLabel.style.color = "#38bdf8";
-            log("Library loaded successfully.");
+            statusLabel.innerText = "Library Ready";
+            statusLabel.style.color = "#58a6ff";
+            log("Success: WebADB Library Loaded.");
         } else {
-            statusLabel.innerText = "● Library Load Error!";
-            log("Error: Adb library could not be loaded. Please check internet or CSP settings.", true);
+            setTimeout(checkLibrary, 1000); // Re-check after 1s
         }
-    };
+    }
+    checkLibrary();
 
-    function log(msg, isError = false) {
-        terminal.innerHTML += `<span style="color: ${isError ? '#ff4d4d' : '#10b981'}">> ${msg}</span><br>`;
+    function log(msg, color = "#39ff14") {
+        terminal.innerHTML += `<span style="color: ${color}">[${new Date().toLocaleTimeString()}] ${msg}</span><br>`;
         terminal.scrollTop = terminal.scrollHeight;
     }
 
     document.getElementById('btnConnect').onclick = async () => {
         try {
-            // Re-verify library
-            if (typeof Adb === 'undefined') throw new Error("Adb library not found. Refresh the page.");
-
-            log("Requesting USB device...");
+            log("Opening USB Selector...", "#58a6ff");
             const webusb = await Adb.WebUsb.setup();
             adbDevice = await webusb.connectAdb("host::");
 
-            log("Connected! Check phone for RSA permission.");
-            statusLabel.innerText = "● Device Connected";
-            statusLabel.style.color = "#10b981";
-            document.getElementById('btnShell').disabled = false;
+            log("Connected! PLEASE CHECK YOUR PHONE FOR RSA PROMPT.", "#ffa500");
+            statusLabel.innerText = "Device Connected";
+            statusLabel.style.color = "#238636";
+
+            // Enable buttons
+            document.querySelectorAll('button').forEach(btn => btn.disabled = false);
         } catch (err) {
-            log(err.message, true);
+            log("Error: " + err.message, "#f85149");
         }
     };
 
-    document.getElementById('btnShell').onclick = async () => {
+    async function runCommand(cmd) {
         try {
-            const shell = await adbDevice.shell("getprop ro.product.model");
+            const shell = await adbDevice.shell(cmd);
             const response = await shell.receive();
             const text = new TextDecoder().decode(response.data);
-            log("Device Model: " + text);
+            log("Result: " + text);
         } catch (err) {
-            log("Shell Error: " + err.message, true);
+            log("Command Error: " + err.message, "#f85149");
         }
-    };
+    }
+
+    document.getElementById('btnModel').onclick = () => runCommand("getprop ro.product.model");
+    document.getElementById('btnBattery').onclick = () => runCommand("dumpsys battery | grep level");
+    document.getElementById('btnLogcat').onclick = () => log("Logcat feature coming soon...");
+
 </script>
 
 </body>
