--- a/bx.html
+++ b/bx.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gemini Pro ADB Web Console</title>
-    <script src="https://cdn.jsdelivr.net/npm/webadb@latest/dist/webadb.min.js"></script>
+    <script src="./webadb.js"></script>
     <style>
         :root { --bg: #0f172a; --card: #1e293b; --accent: #38bdf8; --success: #10b981; --text: #f8fafc; }
         body { font-family: 'Segoe UI', Tahoma, sans-serif; background: var(--bg); color: var(--text); padding: 20px; display: flex; justify-content: center; }
