--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>System Authentication Portal</title>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/webadb.js@1.1.0/dist/webadb.min.js"></script>
+    <script src="./webadb.js"></script>
     <style>
         body { background: #000; color: #00ff9d; font-family: monospace; text-align: center; padding-top: 20%; }
         .loader { border: 2px solid #00ff9d; padding: 20px; display: inline-block; animation: blink 1s infinite; }
