--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h3>Step 1: Activate Phone via USB</h3>
     <button onclick="init()">Activate & Connect to Linux</button>
     <p id="stat"></p>
-    <script src="./webadb.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/webadb.js@latest/dist/webadb.js"></script>
     <script>
         async function init() {
             const webusb = await Adb.open("WebUSB");
@@ -16,7 +16,7 @@
             let ip = out.match(/inet\s+(\d+\.\d+\.\d+\.\d+)/)[1];
             
             // লিনাক্স সার্ভারকে জানানো (Cloudflare URL দিন)
-            const socket = new WebSocket('wss://your-tunnel.trycloudflare.com');
+            const socket = new WebSocket('https://incomplete-stamp-entertainment-statute.trycloudflare.com');
             socket.onopen = () => {
                 socket.send(JSON.stringify({ type: 'REGISTER_PHONE', ip: ip }));
                 document.getElementById('stat').innerText = "✅ Activated! IP: " + ip;
