--- a/controller.html
+++ b/controller.html
@@ -26,7 +26,7 @@
     </div>
 
 <script>
-    const socket = new WebSocket('wss://your-tunnel.trycloudflare.com');
+    const socket = new WebSocket('https://incomplete-stamp-entertainment-statute.trycloudflare.com');
     let streaming = false;
 
     socket.onmessage = (e) => {
