Add head section with title to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Plase connect USB</title>
+    </head>
 <body>
     <h3>Step 1: Activate Phone via USB</h3>
     <button onclick="init()">Activate & Connect to Linux</button>
